--- a/FE/src/app/components/upload-image/upload-image.component.scss
+++ b/FE/src/app/components/upload-image/upload-image.component.scss
@@ -8,8 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     padding: 0px 5px;
     border: solid black 1px;
     cursor:default;
